--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,7 @@
     </script>
 
     <link rel="stylesheet" href="./css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
   <body class="page">
@@ -28,7 +29,7 @@
               <a href="index.html" class="header__nav-link">Меню на день</a>
             </li>
             <li>
-              <a href="profile.html" class="header__nav-link header__nav-link--active"> Профіль </a>
+              <a href="profile.html" class="header__nav-link header__nav-link--active">Профіль</a>
             </li>
           </ul>
         </nav>
@@ -40,203 +41,190 @@
       </div>
     </header>
 
-    <div class="layout">
-      <aside class="sidebar">
-        <ul class="sidebar__days">
-          <li>
-            <a href="index.html" class="sidebar__day-btn">Меню на день</a>
-          </li>
-          <li>
-            <a href="profile.html" class="sidebar__day-btn" aria-current="true"> Профіль </a>
-          </li>
-        </ul>
-      </aside>
+    <div class="profile-container">
+      <main class="profile-page">
+        <header class="profile-header">
+          <div class="profile-header__avatar"></div>
+          <div class="profile-header__info">
+            <h1 class="profile-header__name">Ольга</h1>
+            <span class="profile-header__email">olga@email.com</span>
+          </div>
+        </header>
 
-      <main class="main">
-        <section class="profile-page">
-          <!-- ================= PROFILE HEADER ================= -->
-          <header class="profile-header">
-            <div class="profile-header__avatar"></div>
-
-            <div class="profile-header__info">
-              <h1 class="profile-header__name">Ольга</h1>
-              <span class="profile-header__email">olga@email.com</span>
-            </div>
-          </header>
-
-          <!-- ================= PROFILE CARD ================= -->
-          <section class="profile-card">
-            <h2 class="profile-card__title">Ваші параметри</h2>
-
-            <div class="profile-layout">
-              <!-- ========== LEFT COLUMN — FORM ========== -->
-              <div class="profile-layout__left">
-                <form class="profile-form" id="profileForm">
-                  <!-- AGE / HEIGHT / WEIGHT -->
-                  <div class="profile-form__row">
-                    <div class="profile-form__field">
-                      <label class="profile-form__label" for="age">Вік</label>
-                      <input
-                        id="age"
-                        type="number"
-                        name="age"
-                        class="profile-form__input"
-                        required />
-                    </div>
-
-                    <div class="profile-form__field">
-                      <label class="profile-form__label" for="height"> Зріст (см) </label>
-                      <input
-                        id="height"
-                        type="number"
-                        name="height"
-                        class="profile-form__input"
-                        required />
-                    </div>
-
-                    <div class="profile-form__field">
-                      <label class="profile-form__label" for="weight"> Вага (кг) </label>
-                      <input
-                        id="weight"
-                        type="number"
-                        name="weight"
-                        step="0.1"
-                        class="profile-form__input"
-                        required />
-                    </div>
-                  </div>
-
-                  <!-- GENDER -->
+        <div class="profile-grid-system">
+          <div class="profile-column-left">
+            <section class="profile-card">
+              <h2 class="profile-card__title">Ваші параметри</h2>
+              <form class="profile-form" id="profileForm">
+                <div class="profile-form__row">
                   <div class="profile-form__field">
-                    <label class="profile-form__label">Стать</label>
-                    <div class="custom-select" id="genderSelect">
-                      <div class="custom-select__trigger">
-                        <span>Жінка</span>
-                        <div class="arrow"></div>
-                      </div>
-                      <div class="custom-select__options">
-                        <span class="custom-select__option selected" data-value="female"
-                          >Жінка</span
-                        >
-                        <span class="custom-select__option" data-value="male">Чоловік</span>
-                      </div>
-                    </div>
-                    <input type="hidden" name="gender" id="genderInput" value="female" />
+                    <label class="profile-form__label" for="age">Вік</label>
+                    <input id="age" type="number" name="age" class="profile-form__input" required />
                   </div>
-
-                  <!-- ACTIVITY -->
                   <div class="profile-form__field">
-                    <label class="profile-form__label">Спосіб життя</label>
-                    <div class="custom-select" id="activitySelect">
-                      <div class="custom-select__trigger">
-                        <span>Немає навантажень</span>
-                        <div class="arrow"></div>
-                      </div>
-                      <div class="custom-select__options">
-                        <span class="custom-select__option selected" data-value="1.2"
-                          >Немає фізичних навантажень (сидяча робота)</span
-                        >
-                        <span class="custom-select__option" data-value="1.375"
-                          >Легкі навантаження (1-3 рази на тиждень)</span
-                        >
-                        <span class="custom-select__option" data-value="1.55"
-                          >Фізичні навантаження (3-5 разів на тиждень)</span
-                        >
-                        <span class="custom-select__option" data-value="1.725"
-                          >Щоденні інтенсивні навантаження</span
-                        >
-                        <span class="custom-select__option" data-value="1.9"
-                          >Спортсмен або важка фізична праця</span
-                        >
-                      </div>
-                    </div>
-                    <input type="hidden" name="activity" id="activityInput" value="1.2" />
+                    <label class="profile-form__label" for="height">Зріст (см)</label>
+                    <input
+                      id="height"
+                      type="number"
+                      name="height"
+                      class="profile-form__input"
+                      required />
                   </div>
-
-                  <!-- Ціль -->
                   <div class="profile-form__field">
-                    <label class="profile-form__label">Ваша ціль</label>
-                    <div class="custom-select" id="goalSelect">
-                      <div class="custom-select__trigger">
-                        <span>Я прекрасна (Підтримка)</span>
-                        <div class="arrow"></div>
-                      </div>
-                      <div class="custom-select__options">
-                        <span class="custom-select__option" data-value="lose"
-                          >Схуднути -10% кКал</span
-                        >
-                        <span class="custom-select__option selected" data-value="maintain"
-                          >Я прекрасна (Підтримка)</span
-                        >
-                        <span class="custom-select__option" data-value="gain"
-                          >Набрати +10% кКал</span
-                        >
-                      </div>
-                    </div>
-                    <input type="hidden" name="goal" id="goalInput" value="maintain" />
+                    <label class="profile-form__label" for="weight">Вага (кг)</label>
+                    <input
+                      id="weight"
+                      type="number"
+                      name="weight"
+                      step="0.1"
+                      class="profile-form__input"
+                      required />
                   </div>
-
-                  <!-- CALCULATE -->
-                  <div class="profile-actions">
-                    <button type="submit" class="profile-actions__btn">Розрахувати</button>
-                  </div>
-                </form>
-              </div>
-
-              <!-- ========== RIGHT COLUMN — RESULT ========== -->
-              <div class="profile-layout__right">
-                <div class="profile-result">
-                  <span class="profile-result__label"> Денна норма калорій </span>
-                  <strong class="profile-result__value" id="dailyCalories"> — ккал </strong>
                 </div>
 
-                <div class="profile-macros">
-                  <div class="profile-macros__item">
-                    <span class="macro-label">Білки</span>
-                    <div>
-                      <span id="normProtein">—</span>
-                      <span>г</span>
+                <div class="profile-form__field">
+                  <label class="profile-form__label">Стать</label>
+                  <div class="custom-select" id="genderSelect">
+                    <div class="custom-select__trigger">
+                      <span>Жінка</span>
+                      <div class="arrow"></div>
+                    </div>
+                    <div class="custom-select__options">
+                      <span class="custom-select__option selected" data-value="female">Жінка</span>
+                      <span class="custom-select__option" data-value="male">Чоловік</span>
                     </div>
                   </div>
+                  <input type="hidden" name="gender" id="genderInput" value="female" />
+                </div>
 
-                  <div class="profile-macros__item">
-                    <span class="macro-label">Жири</span>
-                    <div>
-                      <span id="normFat">—</span>
-                      <span>г</span>
+                <div class="profile-form__field">
+                  <label class="profile-form__label">Спосіб життя</label>
+                  <div class="custom-select" id="activitySelect">
+                    <div class="custom-select__trigger">
+                      <span>Немає навантажень</span>
+                      <div class="arrow"></div>
+                    </div>
+                    <div class="custom-select__options">
+                      <span class="custom-select__option selected" data-value="1.2"
+                        >Немає фізичних навантажень</span
+                      >
+                      <span class="custom-select__option" data-value="1.375"
+                        >Легкі (1-3 рази на тиждень)</span
+                      >
+                      <span class="custom-select__option" data-value="1.55"
+                        >Середні (3-5 разів на тиждень)</span
+                      >
+                      <span class="custom-select__option" data-value="1.725"
+                        >Інтенсивні (щодня)</span
+                      >
                     </div>
                   </div>
+                  <input type="hidden" name="activity" id="activityInput" value="1.2" />
+                </div>
 
-                  <div class="profile-macros__item">
-                    <span class="macro-label">Вуглеводи</span>
-                    <div>
-                      <span id="normCarbs">—</span>
-                      <span>г</span>
+                <div class="profile-form__field">
+                  <label class="profile-form__label">Ваша ціль</label>
+                  <div class="custom-select" id="goalSelect">
+                    <div class="custom-select__trigger">
+                      <span>Підтримка ваги</span>
+                      <div class="arrow"></div>
+                    </div>
+                    <div class="custom-select__options">
+                      <span class="custom-select__option" data-value="lose">Схуднути (-10%)</span>
+                      <span class="custom-select__option selected" data-value="maintain"
+                        >Підтримка ваги</span
+                      >
+                      <span class="custom-select__option" data-value="gain">Набрати (+10%)</span>
                     </div>
                   </div>
-
-                  <div class="profile-macros__item">
-                    <span class="macro-label">Вода</span>
-                    <div>
-                      <span id="normWater">—</span>
-                      <span>л</span>
-                    </div>
-                  </div>
+                  <input type="hidden" name="goal" id="goalInput" value="maintain" />
                 </div>
 
                 <div class="profile-actions">
-                  <button class="profile-actions__btn" type="submit" form="profileForm">
-                    Зберегти налаштування
-                  </button>
+                  <button type="submit" class="profile-actions__btn">Оновити дані</button>
+                </div>
+              </form>
+            </section>
+
+            <section class="profile-card">
+              <h2 class="profile-card__title">Денна норма</h2>
+              <div class="profile-result">
+                <span class="profile-result__label">Калорії 🍃</span>
+                <strong class="profile-result__value" id="dailyCalories">—</strong>
+              </div>
+
+              <div class="profile-macros">
+                <div class="profile-macros__item">
+                  <span class="macro-label">Білки</span>
+                  <span class="macro-value"><span id="normProtein">—</span>г</span>
+                </div>
+                <div class="profile-macros__item">
+                  <span class="macro-label">Жири</span>
+                  <span class="macro-value"><span id="normFat">—</span>г</span>
+                </div>
+                <div class="profile-macros__item">
+                  <span class="macro-label">Вуглеводи</span>
+                  <span class="macro-value"><span id="normCarbs">—</span>г</span>
+                </div>
+                <div class="profile-macros__item">
+                  <span class="macro-label">Вода</span>
+                  <span class="macro-value"><span id="normWater">—</span>л</span>
                 </div>
               </div>
-            </div>
-          </section>
-        </section>
+            </section>
+          </div>
+
+          <div class="profile-column-right">
+            <section class="profile-card">
+              <h2 class="profile-card__title">Аналіз стану тіла</h2>
+              <div class="bmi-analysis">
+                <div class="bmi-analysis__header">
+                  <span class="profile-form__label">Ваш ІМТ</span>
+                  <span class="bmi-analysis__number" id="bmiValue">22.5</span>
+                </div>
+                <div class="bmi-visual-scale">
+                  <div class="bmi-visual-scale__pointer" id="bmiPointer" style="left: 45%"></div>
+                </div>
+                <p class="bmi-analysis__status" id="bmiStatus">Ваша вага в нормі</p>
+              </div>
+              <div id="bmiAdvice" class="bmi-advice-text"></div>
+            </section>
+
+            <section class="profile-card">
+              <h2 class="profile-card__title">Контроль ваги</h2>
+
+              <div class="profile-form__field">
+                <label class="profile-form__label">Бажана вага (кг)</label>
+                <div class="weight-tracker-input">
+                  <input type="number" id="targetWeight" placeholder="Введіть ціль..." step="0.1" />
+                </div>
+              </div>
+
+              <div class="profile-form__field" style="margin-top: 20px">
+                <label class="profile-form__label">Вага сьогодні (кг)</label>
+                <div class="weight-tracker-input">
+                  <input type="number" id="currentWeightInput" placeholder="74.0" step="0.1" />
+                  <button type="button" id="saveWeightBtn">Записати</button>
+                </div>
+              </div>
+            </section>
+
+            <section class="profile-card">
+              <div class="weight-dynamics">
+                <h3>Динаміка ваги</h3>
+
+                <div class="weight-chart-box">
+                  <canvas id="weightChartCanvas"></canvas>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </main>
     </div>
 
     <script src="js/theme-toggle.js"></script>
     <script type="module" src="js/profile.js"></script>
+   
   </body>
 </html>
