--- a/index.html
+++ b/index.html
@@ -275,34 +275,81 @@
 
           <!-- ================= Water Sidebar ================= -->
           <aside class="water-sidebar">
-            <div class="water-meter">
-              <div class="column-header">
-                <h2 class="column-header__title">Вода</h2>
-              </div>
+            <div class="column-header">
+              <h2 class="column-header__title">Вода</h2>
+            </div>
 
+            <div class="water-meter">
               <div class="water-meter__glass">
-                <div class="water-meter__fill" id="waterFill" style="--level: 0%">
-                  <span class="water-meter__value" id="currentWaterText">0.0 л</span>
+                <span class="water-meter__value">1.3 / 2.5 L</span>
+
+                <div class="water-meter__fill" id="waterFill" style="--level: 40%">
+                  <span class="water-meter__value" id="currentWaterText">0.8 / 2.5 L</span>
                 </div>
               </div>
 
               <div class="water-actions">
                 <button class="water-btn" data-amount="0.25">
-                  <span class="water-btn__icon">🥛</span>
-                  <span class="water-btn__text">0.25</span>
+                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M17.5 3.5L16.2 20.5C16.1 21.3 15.4 22 14.6 22H9.4C8.6 22 7.9 21.3 7.8 20.5L6.5 3.5H17.5Z"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M7 8H17"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linecap="round" />
+                  </svg>
+                  <span class="water-btn__text">0.25 л</span>
                 </button>
+
                 <button class="water-btn" data-amount="0.5">
-                  <span class="water-btn__icon">💧</span>
-                  <span class="water-btn__text">0.5</span>
+                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M10 2H14V5H10V2Z"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M8 9C8 7 9 5 10 5H14C15 5 16 7 16 9V20C16 21.1 15.1 22 14 22H10C8.9 22 8 21.1 8 20V9Z"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linejoin="round" />
+                    <circle cx="12" cy="14" r="1.5" stroke="currentColor" stroke-width="1.2" />
+                  </svg>
+                  <span class="water-btn__text">0.5 л</span>
                 </button>
+
                 <button class="water-btn" data-amount="0.75">
-                  <span class="water-btn__icon">🍼</span>
-                  <span class="water-btn__text">0.75</span>
+                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M9 3H15V6H9V3Z"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M7 7H17V20C17 21.1 16.1 22 15 22H9C7.9 22 7 21.1 7 20V7Z"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M17 10H18.5C19.3 10 20 10.7 20 11.5V16.5C20 17.3 19.3 18 18.5 18H17"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linecap="round" />
+                    <path
+                      d="M7 10H17"
+                      stroke="currentColor"
+                      stroke-width="1.2"
+                      stroke-linecap="round" />
+                  </svg>
+                  <span class="water-btn__text">0.75 л</span>
                 </button>
               </div>
 
-              <div class="water-meter__meta">з 2.5 л</div>
-              <button id="resetWater" class="water-reset-btn">✕ скинути день</button>
+              <button id="resetWater" class="water-reset-btn">✕ СКИНУТИ ДЕНЬ</button>
             </div>
           </aside>
         </div>
