feat: update header links and add recipes page
- Changed header logo to link to index.html in index.html and profile.html
- Updated navigation links in both index.html and profile.html
- Created a new recipes.html page with a layout for displaying recipes
- Added styles for the recipes page in _recipes-page.scss
- Updated main.scss to import the new recipes page styles
- Refactored layout styles in _layout.scss for better structure
- Added a container class for layout consistency
- Minor adjustments to base styles in _base.scss

--- a/profile.html
+++ b/profile.html
@@ -21,60 +21,62 @@
   <body class="page">
     <header class="header">
       <div class="header__container">
-        <span class="header__logo">Minto 🍃</span>
+        <a href="index.html" class="header__logo">Minto 🍃</a>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
+            <a href="recipes.html" class="header__nav-link header__nav-link--active">Рецепти</a>
             <li>
               <a href="index.html" class="header__nav-link">Меню на день</a>
             </li>
-            <li>
-              <a href="profile.html" class="header__nav-link header__nav-link--active">Профіль</a>
-            </li>
+
+            <li><a href="#" class="header__nav-link">Меню на тиждень</a></li>
+            <li><a href="#" class="header__nav-link">Список покупок</a></li>
+            <li><a href="#" class="header__nav-link">Статистика</a></li>
           </ul>
         </nav>
 
         <div class="header__actions">
           <button class="theme-toggle" type="button" aria-label="Змінити тему">
-                <!-- Sun -->
-                <svg
-                  class="sun-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round">
-                  <circle cx="12" cy="12" r="5"></circle>
-                  <line x1="12" y1="1" x2="12" y2="3"></line>
-                  <line x1="12" y1="21" x2="12" y2="23"></line>
-                  <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                  <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                  <line x1="1" y1="12" x2="3" y2="12"></line>
-                  <line x1="21" y1="12" x2="23" y2="12"></line>
-                  <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                  <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-                </svg>
+            <!-- Sun -->
+            <svg
+              class="sun-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <circle cx="12" cy="12" r="5"></circle>
+              <line x1="12" y1="1" x2="12" y2="3"></line>
+              <line x1="12" y1="21" x2="12" y2="23"></line>
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+              <line x1="1" y1="12" x2="3" y2="12"></line>
+              <line x1="21" y1="12" x2="23" y2="12"></line>
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+            </svg>
 
-                <!-- Moon -->
-                <svg
-                  class="moon-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round">
-                  <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
-                </svg>
-              </button>
-          <span class="header__profile-name">Ольга</span>
+            <!-- Moon -->
+            <svg
+              class="moon-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+            </svg>
+          </button>
+          <a href="profile.html" class="header__profile-name">Ольга</a>
         </div>
       </div>
     </header>
@@ -263,6 +265,5 @@
 
     <script src="js/theme-toggle.js"></script>
     <script type="module" src="js/profile.js"></script>
-   
   </body>
 </html>
