--- a/recipes.html
+++ b/recipes.html
@@ -1,15 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Рецепти</title>
 
-    <!-- ================= Fonts ================= -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- ================= Theme Bootstrap ================= -->
     <script>
       document.documentElement.classList.add('no-transition');
 
@@ -21,12 +19,10 @@
       })();
     </script>
 
-    <!-- ================= Styles ================= -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body class="page">
-    <!-- ================= Header ================= -->
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="header__logo">Minto 🍃</a>
@@ -91,6 +87,21 @@
       <div class="container">
         <header class="recipe-page__intro">
           <h1 class="recipe-page__title">Рецепти</h1>
+          <div class="recipe-page__actions">
+            <button class="btn-add-recipe" id="open-add-modal">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2.5">
+                <line x1="12" y1="5" x2="12" y2="19"></line>
+                <line x1="5" y1="12" x2="19" y2="12"></line>
+              </svg>
+              <span>Додати рецепт</span>
+            </button>
+          </div>
           <div class="recipe-page__search">
             <input
               type="text"
@@ -102,71 +113,187 @@
         <nav class="recipe-filters">
           <div class="recipe-filters__group">
             <div class="recipe-filters__list">
-              <button class="recipe-filters__item recipe-filters__item--active">Всі</button>
-              <button class="recipe-filters__item">Сніданок</button>
-              <button class="recipe-filters__item">Обід</button>
-              <button class="recipe-filters__item">Вечеря</button>
-              <button class="recipe-filters__item">Десерти</button>
+              <button class="recipe-filters__item recipe-filters__item--active" data-category="all">
+                Всі
+              </button>
+              <button class="recipe-filters__item" data-category="breakfast">Сніданок</button>
+              <button class="recipe-filters__item" data-category="lunch">Обід</button>
+              <button class="recipe-filters__item" data-category="dinner">Вечеря</button>
+              <button class="recipe-filters__item" data-category="dessert">Десерти</button>
+              <button class="recipe-filters__item" data-category="snack">Перекуси</button>
+              <button class="recipe-filters__item" data-category="drinks">Напої</button>
+              <button class="recipe-filters__item" data-category="bakery">Випічка</button>
+              <button class="recipe-filters__item" data-category="fast">Швидкі рецепти⚡️</button>
             </div>
           </div>
         </nav>
 
-        <section class="recipe-grid">
-          <article class="recipe-card">
-            <div class="recipe-card__image-box">
-              <img
-                src="https://images.unsplash.com/photo-1517673132405-a56a62b18caf?q=80&w=500&auto=format&fit=crop"
-                alt="Вівсянка з ягодами"
-                class="recipe-card__img" />
-              <div class="recipe-card__stats">
-                <span class="recipe-card__kcal">320 ккал</span>
-              </div>
-            </div>
-            <div class="recipe-card__content">
-              <h3 class="recipe-card__name">Вівсянка з ягодами</h3>
-              <p class="recipe-card__macros">Б: 10г · Ж: 5г · В: 45г</p>
-              <button class="recipe-card__btn">Переглянути</button>
-            </div>
-          </article>
-
-          <article class="recipe-card">
-            <div class="recipe-card__image-box">
-              <img
-                src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=500&auto=format&fit=crop"
-                alt="Салат Цезар"
-                class="recipe-card__img" />
-              <div class="recipe-card__stats">
-                <span class="recipe-card__kcal">450 ккал</span>
-              </div>
-            </div>
-            <div class="recipe-card__content">
-              <h3 class="recipe-card__name">Салат "Цезар"</h3>
-              <p class="recipe-card__macros">Б: 25г · Ж: 30г · В: 12г</p>
-              <button class="recipe-card__btn">Переглянути</button>
-            </div>
-          </article>
-
-          <article class="recipe-card">
-            <div class="recipe-card__image-box">
-              <img
-                src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?q=80&w=500&auto=format&fit=crop"
-                alt="Піца Маргарита"
-                class="recipe-card__img" />
-              <div class="recipe-card__stats">
-                <span class="recipe-card__kcal">280 ккал</span>
-              </div>
-            </div>
-            <div class="recipe-card__content">
-              <h3 class="recipe-card__name">Піца Маргарита</h3>
-              <p class="recipe-card__macros">Б: 12г · Ж: 10г · В: 35г</p>
-              <button class="recipe-card__btn">Переглянути</button>
-            </div>
-          </article>
-        </section>
+        <div class="recipe-grid" id="recipe-container"></div>
       </div>
     </main>
 
-    <!-- ================= Scripts ================= -->
+    <div class="modal-overlay" id="add-recipe-modal">
+      <div class="modal-card">
+        <button class="modal-card__close" id="close-modal">&times;</button>
+
+        <div id="initial-options-view">
+          <div class="modal-card__header">
+            <h2>Створити магію ✨</h2>
+            <p>Оцифруйте скриншот або запишіть власну ідею</p>
+          </div>
+
+          <div class="modal-card__options">
+            <label class="option-card option-card--ai" for="ai-upload">
+              <input type="file" id="ai-upload" accept="image/*" hidden />
+              <div class="option-card__icon">📸</div>
+              <div class="option-card__info">
+                <h3>Завантажити скриншот</h3>
+                <p>ШІ сам розпізнає текст та інгредієнти</p>
+              </div>
+            </label>
+
+            <button class="option-card" id="manual-entry-btn" type="button">
+              <div class="option-card__icon">✍️</div>
+              <div class="option-card__info">
+                <h3>Ввести вручну</h3>
+                <p>Створіть рецепт з нуля самостійно</p>
+              </div>
+            </button>
+          </div>
+        </div>
+
+        <div id="recipe-preview-form" style="display: none">
+          <div class="modal-card__header">
+            <h2>Додати рецепт</h2>
+            <p>Перевір дані перед збереженням</p>
+          </div>
+
+          <form class="preview-form" id="main-recipe-form">
+            <div class="form-group">
+              <label for="prev-name">Назва страви</label>
+              <input
+                type="text"
+                id="prev-name"
+                required
+                placeholder="Наприклад: Вівсянка з ягодами" />
+            </div>
+
+            <div class="form-row" style="display: flex; gap: 15px">
+              <div class="form-group" style="flex: 1">
+                <label for="prev-calories">Ккал</label>
+                <input type="number" id="prev-calories" placeholder="320" />
+              </div>
+              <div class="form-group" style="flex: 1">
+                <label for="prev-category">Категорія</label>
+                <select id="prev-category">
+                  <option value="breakfast">Сніданок</option>
+                  <option value="lunch">Обід</option>
+                  <option value="dinner">Вечеря</option>
+                  <option value="snack">Перекус</option>
+                  <option value="dessert">Десерт</option>
+                  <option value="drinks">Напої</option>
+                  <option value="bakery">Випічка</option>
+                  <option value="fast">Швидкі рецепти⚡️</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="prev-ingredients"
+                >Інгредієнти (краще писати через кому: Назва, Кількість)</label
+              >
+              <textarea
+                id="prev-ingredients"
+                placeholder="Вівсянка, 50г&#10;Молоко, 100мл"></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="prev-steps">Спосіб приготування</label>
+              <textarea id="prev-steps" placeholder="1. Змішайте...&#10;2. Запікайте..."></textarea>
+            </div>
+
+            <div class="modal-card__actions">
+              <button type="button" class="btn-secondary" id="cancel-preview">Скасувати</button>
+              <button type="submit" class="btn-primary" id="save-recipe-btn">
+                Зберегти рецепт 🥗
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div id="confirm-modal" class="modal-overlay">
+      <div class="modal-card confirm-box">
+        <h3>Видалити рецепт?</h3>
+        <p>Цю дію неможливо буде скасувати.</p>
+        <div class="confirm-btns">
+          <button id="confirm-yes" class="btn-confirm btn-danger">Так, видалити</button>
+          <button id="confirm-no" class="btn-confirm btn-secondary">Скасувати</button>
+        </div>
+      </div>
+    </div>
+    <div id="view-recipe-modal" class="modal-overlay">
+      <div class="modal-card recipe-detail">
+        <button class="modal-card__close" id="close-view-modal">&times;</button>
+
+        <div class="recipe-detail__header">
+          <h2 id="view-title">Назва рецепта</h2>
+          <div class="recipe-detail__tags" id="view-tags"></div>
+        </div>
+        <div class="recipe-view__actions">
+          <button class="btn-primary" id="edit-recipe-btn">Редагувати рецепт ✏️</button>
+        </div>
+        <div class="recipe-rating">
+          <span class="star" data-value="1">★</span>
+          <span class="star" data-value="2">★</span>
+          <span class="star" data-value="3">★</span>
+          <span class="star" data-value="4">☆</span>
+          <span class="star" data-value="5">☆</span>
+          <span class="rating-value">3.0</span>
+        </div>
+
+        <div class="nutrition-summary">
+          <div class="nutrition-item">
+            <span class="nutrition-val" id="view-calories">0</span>
+            <span class="nutrition-label">ккал</span>
+          </div>
+          <div class="nutrition-divider"></div>
+          <div class="nutrition-item">
+            <span class="nutrition-val" id="view-proteins">0</span>
+            <span class="nutrition-label">Білки</span>
+          </div>
+          <div class="nutrition-item">
+            <span class="nutrition-val" id="view-carbs">0</span>
+            <span class="nutrition-label">Вугл.</span>
+          </div>
+          <div class="nutrition-item">
+            <span class="nutrition-val" id="view-fats">0</span>
+            <span class="nutrition-label">Жири</span>
+          </div>
+        </div>
+
+        <div class="recipe-detail__body">
+          <section class="recipe-section">
+            <h3><span class="icon">🌱</span> Інгредієнти</h3>
+            <ul id="view-ingredients-list" class="ingredients-list"></ul>
+          </section>
+
+          <section class="recipe-section">
+            <h3><span class="icon">👨‍🍳</span> Спосіб приготування</h3>
+            <div id="view-steps" class="steps-content"></div>
+          </section>
+
+          <section class="recipe-section recipe-section--notes">
+            <h3><span class="icon">📝</span> Мої нотатки</h3>
+            <textarea id="view-notes" placeholder="Додай свої зауваження до рецепта..."></textarea>
+            <button id="save-notes-btn" class="btn-save-mini">Зберегти нотатку</button>
+          </section>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/add-recipe.js"></script>
     <script src="js/theme-toggle.js"></script>
   </body>
 </html>
